# fishier-than-light

./: LICENSE.md  README.md  mvloc.config.jsonc  pyproject.toml
.github/workflows/: nightly.yml
auxfiles-fr/data/scripts/: fishIcon.lua
auxfiles-ru/data/scripts/: fishIcon.lua
locale-machine/data/autoBlueprints.xml.append/: ja.po
locale-machine/data/blueprints.xml.append/: ja.po
locale/data/autoBlueprints.xml.append/: de.po  (+9 more)
machine-json/: machine-ja-1.2.3.json
src-en/data/: animations.xml.append  autoBlueprints.xml.append  blueprints.xml.append  events_addon_icon.xml.append  events_special_boons.xml.append  events_special_fish_maw.xml  events_special_fish_maw_up_1.xml  events_special_fish_maw_up_2_1.xml  events_special_fish_maw_up_2_2.xml  events_special_fish_maw_up_2_3.xml  events_special_fish_maw_up_3_1.xml  events_special_fish_maw_up_3_2.xml  events_special_fish_maw_up_3_3.xml  events_special_fish_maw_up_3_4.xml  events_special_fish_maw_up_3_5.xml  events_special_fish_maw_up_3_6.xml  events_special_fishing.xml  events_special_jukebox.xml.append  events_special_lightspeed.xml.append  events_special_main.xml.append  events_special_multiverse.xml.append  events_special_storage.xml.append  fish_maw_enemy.txt  fish_maw_enemy.xml  fish_station.txt  fish_station.xml  fishp_arty_a.txt  fishp_arty_b.txt  fishp_arty_c.txt  fishp_arty_c.xml  fishp_trawler_a.txt  fishp_trawler_b.txt  fishp_trawler_b.xml  fishp_trawler_c.txt  fishp_trawler_c.xml  hyperspace.xml.append  sector_data.xml.append  sounds.xml.append  text_misc.xml.append
src-en/mod-appendix/: metadata.xml
(+251 files in other folders)
