[tool.poetry]
name = "fishier-than-light-translation"
version = "0.1.0"
description = ""
authors = ["ranhai613 <hulanhai613@gmail.com>, Aleev141 <aleev1414@gmail.com>"]
readme = "README.md"
packages = [{include = "fishier_than_light_translation"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
mvlocscript = {git = "https://github.com/ftl-mv-translation/mvloc.git", branch = "feature/gemini"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
